--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
     <section class="profile page__section">
       <div class="profile__image"></div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title">Идет загрузка...</h1>
         <button class="profile__edit-button" type="button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description">Идет загрузка...</p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -37,8 +37,18 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <label class="popup__label">
+          <input id="name-input" type="text" name="name" class="popup__input popup__input_type_name" 
+          placeholder="Имя" required minlength="2" maxlength="40" 
+          pattern="^[a-zA-Zа-яёА-ЯЁ\- ]+$" data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы.">
+          <span class="popup__error name-input-error"></span>
+        </label>
+        <label class="popup__label">
+          <input id="description-input" type="text" name="description" class="popup__input popup__input_type_description" 
+          placeholder="Занятие" required minlength="2" maxlength="200"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\- ]+$" data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы.">
+          <span class="popup__error description-input-error"></span>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -48,8 +58,16 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <label class="popup__label">
+          <input id="card-name-input" type="text" name="place-name" class="popup__input popup__input_type_card-name" 
+          placeholder="Название" required minlength="2" maxlength="30"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\- ]+$" data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы.">
+          <span class="popup__error card-name-input-error"></span>
+        </label>
+        <label class="popup__label">
+          <input id="link-input" type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+          <span class="popup__error link-input-error"></span>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -61,6 +79,20 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+  <div class="popup popup_type_new-avatar">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-avatar">
+        <label class="popup__label">
+          <input id="avatar-link-input" type="url" name="avatar-link" class="popup__input popup__input_type_avatar-link" 
+          placeholder="Ссылка на картинку" required>
+          <span class="popup__error avatar-link-input-error"></span>
+        </label>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
 </div>
 
 <template id="card-template">
@@ -70,7 +102,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="card__like-container">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__like-counts"></span>
+      </div>
     </div>
   </li>
 </template>
