--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,12 @@
       </form>
     </div>
   </div>
+  <div class="popup popup_type_confirm">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Вы уверены?</h3>
+      <button type="submit" class="button popup__button">Да</button>    </div>
+  </div>
 </div>
 
 <template id="card-template">
