add confirmation popup using data attributes

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
+      <form class="popup__form" name="edit-profile" novalidate>
         <label class="popup__label">
           <input id="name-input" type="text" name="name" class="popup__input popup__input_type_name" 
           placeholder="Имя" required minlength="2" maxlength="40" 
@@ -57,7 +57,7 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
+      <form class="popup__form" name="new-place" novalidate>
         <label class="popup__label">
           <input id="card-name-input" type="text" name="place-name" class="popup__input popup__input_type_card-name" 
           placeholder="Название" required minlength="2" maxlength="30"
@@ -83,7 +83,7 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Обновить аватар</h3>
-      <form class="popup__form" name="new-avatar">
+      <form class="popup__form" name="new-avatar" novalidate>
         <label class="popup__label">
           <input id="avatar-link-input" type="url" name="avatar-link" class="popup__input popup__input_type_avatar-link" 
           placeholder="Ссылка на картинку" required>
